// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. caption without credits 1`] = `
<View>
  <View>
    <Text
      allowFontScaling={false}
      testID={null}
    >
      Some caption text goes in here
    </Text>
  </View>
</View>
`;

exports[`2. caption with credits 1`] = `
<View>
  <View>
    <Text
      allowFontScaling={false}
      testID={null}
    >
      Some caption text goes in here
    </Text>
    <Text
      allowFontScaling={false}
      testID={null}
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`3. caption with credits only 1`] = `
<View>
  <View>
    <Text
      allowFontScaling={false}
      testID={null}
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`4. caption with child 1`] = `
<View>
  <Text
    allowFontScaling={false}
  >
    Hello world!
  </Text>
  <View>
    <Text
      allowFontScaling={false}
      testID={null}
    >
      Some caption text goes in here
    </Text>
    <Text
      allowFontScaling={false}
      testID={null}
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`5. centred caption without credits 1`] = `
<View>
  <View>
    <Text
      allowFontScaling={false}
      testID={null}
    >
      Some caption text goes in here
    </Text>
  </View>
</View>
`;

exports[`6. centred caption caption with credits 1`] = `
<View>
  <View>
    <Text
      allowFontScaling={false}
      testID={null}
    >
      Some caption text goes in here
    </Text>
    <Text
      allowFontScaling={false}
      testID={null}
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`7. centred caption caption with credits only 1`] = `
<View>
  <View>
    <Text
      allowFontScaling={false}
      testID={null}
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;

exports[`8. centred caption caption with child 1`] = `
<View>
  <Text
    allowFontScaling={false}
  >
    Hello world!
  </Text>
  <View>
    <Text
      allowFontScaling={false}
      testID={null}
    >
      Some caption text goes in here
    </Text>
    <Text
      allowFontScaling={false}
      testID={null}
    >
      JUST CREDITS
    </Text>
  </View>
</View>
`;
